[package]
name = "rust-knowledge"
version = "0.1.0"
edition = "2018"

[features]
simd = []

[lib]
name = "procmacrotestlib"
path = "./src/macros/macro_lib.rs"
proc-macro = true

[dependencies]
chrono = "0.4"
regex = "1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
bitvec = { version = "1" }
num-traits = "0.2"
futures-async-stream = "0.2"
futures = "0.3"
